--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,10 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.android.lmj.firstapp.MainActivity">
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:onClick="onButton1Clicked"
+        android:text="뭐지\n개행도되네\nasdfasdfasdfasdfasdfasdfasdfasdfasdf\n스스로 중앙으로 졍렬하는군"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
