--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="button_GoogleConnect"
+        android:onClick="onButton_GoogleConnect"
         android:text="궁금하면 눌러보기"
         android:layout_marginBottom="10dp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
@@ -32,15 +32,30 @@
 
     <Button
         android:id="@+id/button2"
-        android:layout_width="140dp"
-        android:layout_height="53dp"
-        android:onClick="button_CallConnect"
-        android:text="전화버튼"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/button3"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginRight="8dp"
+        android:onClick="onButton_CallConnect"
+        android:text="전화버튼"
+        app:layout_constraintBottom_toTopOf="@+id/button3"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New activity"
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginLeft="8dp"
+        android:onClick="onButton_NewActivity"/>
 
 </android.support.constraint.ConstraintLayout>
