--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/button3"
         app:layout_constraintBottom_toTopOf="@+id/guideline3">
         <Button
-            android:id="@+id/button"
+            android:id="@+id/button1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
