--- a/app/src/main/res/layout/activity_sub2.xml
+++ b/app/src/main/res/layout/activity_sub2.xml
@@ -10,8 +10,8 @@
         android:id="@+id/button6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="움직이는 버튼"
-        android:textSize="50dp"
+        android:text="움직이는 버튼:50%"
+        android:textSize="40dp"
         android:textColor="#ff0000"
         android:onClick="onButton6"
         android:layout_marginLeft="0dp"
@@ -44,5 +44,20 @@
         android:id="@+id/guideline5"
         app:layout_constraintGuide_percent="0.9"
         android:orientation="horizontal" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Middle"
+        android:textColor="#ff0000ff"
+        android:layout_marginTop="-1dp"
+        app:layout_constraintTop_toBottomOf="@+id/button6"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="0dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5" />
 
 </android.support.constraint.ConstraintLayout>
