--- a/app/src/main/res/layout/activity_sub2.xml
+++ b/app/src/main/res/layout/activity_sub2.xml
@@ -12,16 +12,17 @@
         android:layout_height="wrap_content"
         android:text="움직이는 버튼:50%"
         android:textSize="40dp"
-        android:textColor="#ff0000"
+        android:textColor="#ffff0000"
+        android:background="#ffdddddd"
         android:onClick="onButton6"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5" />
+        android:layout_marginTop="0dp" />
 
     <Button
         android:id="@+id/button7"
@@ -51,13 +52,13 @@
         android:layout_height="wrap_content"
         android:text="Middle"
         android:textColor="#ff0000ff"
-        android:layout_marginTop="-1dp"
-        app:layout_constraintTop_toBottomOf="@+id/button6"
         android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="0dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+        android:layout_marginTop="0dp"
+        app:layout_constraintTop_toBottomOf="@+id/button6" />
 
 </android.support.constraint.ConstraintLayout>
