--- a/app/src/main/res/layout/activity_sub3.xml
+++ b/app/src/main/res/layout/activity_sub3.xml
@@ -7,6 +7,18 @@
     tools:context="com.android.lmj.firstapp.SubActivity3">
 
     <Button
+        android:id="@+id/button16"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="이미지 감추기"
+        android:onClick="onButton_Image"
+        android:textColor="#ff000000"
+        android:textSize="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"/>
+
+    <Button
         android:id="@+id/button15"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,10 +35,11 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/button15"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
-
+        app:layout_constraintTop_toBottomOf="@+id/button16"
+        app:layout_constraintVertical_bias="0.0">
         <ScrollView
             android:id="@+id/scrollView"
             android:layout_width="wrap_content"
@@ -35,17 +48,25 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent">
-
-            <android.support.constraint.ConstraintLayout
+            <!--스크롤뷰 -->
+            <FrameLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
-
                 <ImageView
-                    android:id="@+id/textView3"
+                    android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/photo"/>
-            </android.support.constraint.ConstraintLayout>
+                    android:src="@drawable/photo"
+                    android:visibility="visible"/>
+                <TextView
+                    android:id="@+id/textView3"
+                    android:text="a???"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="#ff333333"
+                    android:visibility="invisible"/>
+            </FrameLayout>
+
         </ScrollView>
     </HorizontalScrollView>
 </android.support.constraint.ConstraintLayout>
