main layout change

--- a/app/src/main/res/layout/activity_sub3.xml
+++ b/app/src/main/res/layout/activity_sub3.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/multiButtonCont"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintLeft_toLeftOf="parent"
