--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -137,7 +137,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:onClick="onButton_NewActivity5"
-                android:text="C, S, T, I"
+                android:text="MultiMedia Timer"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="@+id/guideline4"
                 app:layout_constraintTop_toBottomOf="@+id/button14" />
