--- a/app/src/main/res/layout/activity_sub8.xml
+++ b/app/src/main/res/layout/activity_sub8.xml
@@ -33,7 +33,7 @@
         android:text="초기화"
         android:textSize="20dp"
         android:textColor="#ff000000"
-        android:onClick="onButton_Initialize"
+        android:onClick="onButton_Reset"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
