--- a/app/src/main/res/layout/activity_sub8.xml
+++ b/app/src/main/res/layout/activity_sub8.xml
@@ -20,6 +20,7 @@
             android:id="@+id/drawOutput"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginBottom="30dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
